[package]
name = "bc-forge-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "End-to-end integration tests for bc-forge token contract on Stellar testnet"
repository = "https://github.com/BCPathway/bc-forge"
license = "MIT"
keywords = ["soroban", "stellar", "integration-test", "e2e"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
soroban-sdk = { version = "22.0.11", features = ["testutils"] }
bc-forge-token = { path = "../contracts/token", features = ["testutils"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }

[[bin]]
name = "integration_test"
path = "integration_test.rs"
