[package]
name = "bc-forge-admin"
version = "0.1.0"
edition = "2021"
publish = false
description = "Admin and access control module for bc-forge token contracts"
license = "MIT"
repository = "https://github.com/BCPathway/bc-forge"
homepage = "https://github.com/BCPathway/bc-forge"
readme = "../../README.md"
keywords = ["soroban", "stellar", "smart-contract", "admin", "access-control"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "22.0.11"
bc-forge-ttl = { path = "../ttl" }

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }
